Changes with APR b1

  *) apr_snprintf()'s %pI format string now takes apr_sockaddr_t *
     instead of sockaddr_in *.  [Jeff Trawick]

  *) Fix a bug in apr_accept() for Win32 and Unix where the local 
     apr_sockaddr_t in the new connected socket was not initialized
     properly.  This could result in a bad string for apr_get_ipaddr(),
     among other things.  [Jeff Trawick]

  *) Add apr_getnameinfo(), a replacement for apr_get_hostname() which
     supports IPv6 and will be friendlier for use with eventual 
     SOCK_DGRAM support.  [Jeff Trawick]

Changes with APR a9

  *) Removed the iconv implementation from the i18n/unix/iconv branch.
     This now resides in the apr-iconv repository, and will be ported
     over time to use native apr types (e.g. apr_dso) for portability.

  *) Only support IPv6 if we have sockaddr_in and a working 
     getaddrinfo().  [Jeff Trawick]

  *) Add apr_parse_addr_port() for parsing the hostname:port portion
     of URLs and similar strings.  [Jeff Trawick]

  *) Add Win32 MMAP support [William Rowe]

  *) Allow the APR programmer to specify if the MMAP is read-only or
     write-able.
     [Ryan Bloom and Will Rowe]

  *) Check more carefully for getaddrinfo().  Accept those that
     require <netdb.h> to be included (e.g., Tru64).  Reject those that 
     fail a very basic operational test (e.g., AIX).  [Jeff Trawick]

  *) Add apr_make_os_sock() for constructing a fully-capable APR
     socket.  [Jeff Trawick]

  *) Make APR's shared memory routines always allocate enough memory
     for the requested segment, the MM internal types, and the APR
     internal types.
     [Ryan Bloom]

  *) Add APR_SIZE_T_FMT.  Get the other APR_xx_T_FMT variables
     defined properly on AIX.  [Jeff Trawick]

  *) network API changes: get rid of apr_get_socket_inaddr(), 
     apr_get_remote_name(), and apr_get_local_name()  [Jeff Trawick]

  *) Add a step at configure time to create a file at the top-level,